@@ -1,5 +1,12 @@
 2006-12-03  Guillem Jover  <guillem@hadrons.org>
 
+	* 3dfx_device.c (id_table_3dfx): Move newar the corresponding ifdef
+	for older kernels.
+	(findCards): Likewise.
+	(driver_3dfx): Forward declare.
+
+2006-12-03  Guillem Jover  <guillem@hadrons.org>
+
 	Rename functions obsoleted in linux 2.1.93.
 
 	* 3dfx_device.c (pcibios_read_config_byte): Rename to ...
